--- a/charts/k8s-skiff/Chart.yaml
+++ b/charts/k8s-skiff/Chart.yaml
@@ -1,24 +1,10 @@
 apiVersion: v2
 name: k8s-skiff
-description: A Helm chart for Kubernetes
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+description: Variant of kamal-skiff for k8s. Deploy auto updating static site powered by nginx with data from git repo.
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "1.16.0"
+version: 0.1.1
+home: https://github.com/mvanduijker/k8s-skiff-site-template
+maintainers:
+  - name: Mark van Duijker
+    email: mark@duyker.nl
+appVersion: "1.0.0"
