chore(k8s-skiff): various improvements

--- a/charts/k8s-skiff/values.yaml
+++ b/charts/k8s-skiff/values.yaml
@@ -9,7 +9,7 @@ replicaCount: 1
 image:
   repository: nginx
   # This sets the pull policy for images.
-  pullPolicy: IfNotPresent
+  pullPolicy: null
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
@@ -94,7 +94,7 @@ httpRoute:
     - matches:
         - path:
             type: PathPrefix
-            value: /headers
+            value: /
   #   filters:
   #   - type: RequestHeaderModifier
   #     requestHeaderModifier:
@@ -126,11 +126,11 @@ resources: {}
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
   httpGet:
-    path: /
+    path: /up
     port: http
 readinessProbe:
   httpGet:
-    path: /
+    path: /up
     port: http
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
