--- a/charts/k8s-skiff/values.yaml
+++ b/charts/k8s-skiff/values.yaml
@@ -63,11 +63,11 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
+  hosts: []
+  #  - host: chart-example.local
+  #    paths:
+  #      - path: /
+  #        pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -87,8 +87,8 @@ httpRoute:
       sectionName: http
       # namespace: default
   # Hostnames matching HTTP header.
-  hostnames:
-    - chart-example.local
+  hostnames: []
+    # - chart-example.local
   # List of rules and filters applied.
   rules:
     - matches:
@@ -154,5 +154,7 @@ volumeMounts: []
 config:
   update_interval: 10
   git_branch: main
+  host: chart-example.local
+  secretName: chart-example-tls
 secret:
   git_url: https://github.com/mvanduijker/k8s-skiff-site-template
